@startuml
'https://plantuml.com/class-diagram

class TiGia{
    + void attach(ITiGiaListener listener)
    + void detach(ITiGiaListener listener)
    + void thayDoiTiGia(float delta)
}
interface ITiGiaListener{
    void listen(float delta)
}
abstract class NhaDauTu
class NhaDauTuA
class NhaDauTuB

ITiGiaListener <|.. NhaDauTu
TiGia o--> ITiGiaListener: ndts
NhaDauTu --> TiGia : tiGia
NhaDauTu <|-- NhaDauTuA
NhaDauTu <|-- NhaDauTuB

@enduml